@@ -2,7 +2,6 @@ package org.osb.web.domain.user.service.impl;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.osb.web.domain.role.model.Role;
@@ -11,9 +10,7 @@ import org.osb.web.domain.user.dto.UserDto;
 import org.osb.web.domain.user.model.User;
 import org.osb.web.domain.user.repository.UserRepository;
 import org.osb.web.domain.user.service.UserService;
-
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -21,20 +18,20 @@ public class UserServiceImpl implements UserService {
 
 	@Autowired
 	private UserRepository userRepository;
-	
+
 	@Autowired
 	private RoleRepository roleRepository;
 
-	@Autowired
-	private PasswordEncoder passwordEncoder;
+	// @Autowired
+	// private PasswordEncoder passwordEncoder;
 
 	@Override
 	public void saveUser(UserDto userDto) {
 		User user = new User();
-		user.setName(userDto.getName());
-		user.setSurname(userDto.getSurname());
+		user.setIzena(userDto.getName());
+		user.setAbizena(userDto.getSurname());
 		user.setEmail(userDto.getEmail());
-		user.setPassword(passwordEncoder.encode(userDto.getPassword()));
+		// user.setPassword(passwordEncoder.encode(userDto.getPassword()));
 		user.setRole(roleRepository.findByType(userDto.getRoleType()).orElseGet(() -> {
 			Role newRole = new Role();
 			newRole.setType(userDto.getRoleType());
@@ -55,12 +52,13 @@ public class UserServiceImpl implements UserService {
 				.stream(users.spliterator(), false)
 				.map(user -> {
 					UserDto userDto = new UserDto();
-					userDto.setName(user.getName());
-					userDto.setSurname(user.getSurname());
+					userDto.setName(user.getIzena());
+					userDto.setSurname(user.getAbizena());
 					userDto.setEmail(user.getEmail());
 					userDto.setRoleType(user.getRole().getType());
 					return userDto;
 				})
-				.collect(Collectors.toList());
+				.toList();
 	}
+
 }
